Use spotify authorization
